add markdown cells for dataset loading section in NLP Intent Parser notebook

--- a/nlp_intent_parser.ipynb
+++ b/nlp_intent_parser.ipynb
@@ -2,6 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bbebb244",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c41f0ac3",
    "metadata": {},
    "source": [
@@ -22,6 +28,14 @@
    "metadata": {},
    "source": [
     "## 1. Import and Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c17da02",
+   "metadata": {},
+   "source": [
+    "##  2. Load Technician Query Dataset"
    ]
   }
  ],
