--- a/nlp_intent_parser.ipynb
+++ b/nlp_intent_parser.ipynb
@@ -27,7 +27,7 @@
    "id": "9ff95169",
    "metadata": {},
    "source": [
-    "## 1. Import and Setup"
+    "### **1. Import and Setup**"
    ]
   },
   {
@@ -35,13 +35,67 @@
    "id": "8c17da02",
    "metadata": {},
    "source": [
-    "##  2. Load Technician Query Dataset"
+    "###  **2. Load Technician Query Dataset**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb5f8410",
+   "metadata": {},
+   "source": [
+    "### **3. Data Exploration (EDA)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56d6f617",
+   "metadata": {},
+   "source": [
+    "### **4. Preprocessing Functions**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c645117",
+   "metadata": {},
+   "source": [
+    "### **5. Topic Modeling Module**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42b56000",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc5b6ae",
+   "metadata": {},
+   "source": [
+    "#### **5.1 TF-IDF + SVM Baseline**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa9b70b",
+   "metadata": {},
+   "source": [
+    "#### **5.2 LDA Topic Modeling (Unsupervised)**"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.11.1)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
